--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "font-awesome": "^4.7.0",
+    "js-search": "^2.0.0",
     "lodash": "^4.17.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
